--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8">
 
-  <title>Entact Login Page</title>
+  <title>Entact</title>
 
     <style>
 @import url('https://fonts.googleapis.com/css?family=Raleway|Yellowtail');
@@ -19,6 +19,7 @@ body{
 	color: #fff;
 	font-family: 'Raleway', sans-serif;
 	font-size: 12px;
+	overflow: hidden;
 }
 
 .body{
